--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: true
+          cache: npm
           cache-dependency-path: ./src/web
       
       - name: Install dependencies
