--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,9 +10,38 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  versioning:
     runs-on: ubuntu-latest
-    name: Build Project
+    name: Versioning
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
+      
+      - uses: codacy/git-version@2.8.0
+        id: version
+        with:
+          release-branch: main
+          prefix: v
+
+      - name: Tag the repository
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "::notice:: ${{ steps.version.outputs.version }}"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+          git tag -a ${{ steps.version.outputs.version }} -m "Release ${{ steps.version.outputs.version }}"
+          git push --tags
+        if: github.ref == 'refs/heads/main'
+
+  backend-build-and-tests:
+    needs: versioning
+    runs-on: ubuntu-latest
+    name: Backend Build and Tests
   
     steps:
       - name: Checkout code
@@ -25,16 +54,31 @@ jobs:
           cache: true
           cache-dependency-path: ./src/**/packages.lock.json
 
-      - name: Build and Tests .NET
+      - name: Restore
         run: |
           dotnet restore ./src/Todo.Api.sln
+
+      - name: Build
+        run: |
           dotnet build --no-restore ./src/Todo.Api.sln
-          dotnet test ./src/Todo.Api.sln --no-restore --no-build --logger trx --results-directory "TestResults"
+
+      - name: Tests
+        run: |
+          dotnet test ./src/Todo.Api.sln --no-restore --no-build --configuration Release --logger trx --results-directory "TestResults"
 
       - uses: actions/upload-artifact@v4
         with:
           name: dotnet-test-results
           path: TestResults
+
+  frontend-build-and-tests:
+    if: false
+    runs-on: ubuntu-latest
+    name: Build Project
+  
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -42,7 +86,7 @@ jobs:
           node-version: '20'
           cache: npm
           cache-dependency-path: ./src/web
-      
+
       - name: Install dependencies
         working-directory: ./src/web
         run: |
