Update .NET build step to specify Release configuration

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Build
         run: |
-          dotnet build --no-restore ./src/Todo.Api.sln
+          dotnet build --no-restore --configuration Release ./src/Todo.Api.sln
 
       - name: Tests
         run: |
