Add dependency check job to build workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -151,3 +151,15 @@ jobs:
       - name: Lint
         run: |
           npm run lint
+          
+  dependency-check:
+    needs: versioning
+    runs-on: ubuntu-latest
+    name: Dependency Check
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
