--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Versioning
 
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -75,6 +78,17 @@ jobs:
           name: dotnet-test-results
           path: TestResults
 
+      - name: Publish
+        if: github.ref == 'refs/heads/main'
+        run: |
+          dotnet publish ./src/api/Todo.Api.sln --no-restore --no-build --configuration Release --output ./publish
+
+      - name: Upload dotnet artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: api
+          path: ./publish
+
   backend-lint:
     needs: versioning
     runs-on: ubuntu-latest
@@ -124,6 +138,12 @@ jobs:
       - name: Build
         run: |
           npm run build
+
+      - name: Upload frontend artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: web
+          path: ./src/web/dist
 
   frontend-lint:
     needs: versioning
@@ -203,3 +223,27 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:${{ matrix.language }}"
+
+  build-docker-image:
+    needs: [versioning, backend-build-and-tests, frontend-build-and-tests]
+    runs-on: ubuntu-latest
+    name: Build Docker Image
+
+    env:
+      version: ${{ needs.versioning.outputs.version }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download dotnet artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: app
+          merge-multiple: false
+
+      - name: Build Docker Image
+        run: |
+          docker build -t todo-app:${{ env.version }} .
+      
+      
