Fix publish command to use project file instead of solution file

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -81,7 +81,7 @@ jobs:
       - name: Publish
         if: github.ref == 'refs/heads/main'
         run: |
-          dotnet publish ./src/api/Todo.Api.sln --no-restore --no-build --configuration Release --output ./publish
+          dotnet publish ./src/api/Todo.Api.csproj --no-restore --no-build --configuration Release --output ./publish
 
       - name: Upload dotnet artifacts
         uses: actions/upload-artifact@v4
